@startuml DiagramaClasesPlanificadorFinanciero
skinparam classAttributeIconSize 0
hide empty members
title Diagrama de Clases - Planificador Financiero

' --- Clases de Dominio (Modelos) ---

class Movimiento {
  - id: number
  - fecha: Date
  - tipo: string
  - categoria: string
  - monto: number
  - idObjetivo: uuid;
  + constructor(fecha: Date, tipo: string, categoria: string, monto: number, idObjetivo: uuid | null)
  + toJSON(): Object
  + getResumen(): string 
  + {static} validar(datos: Object): boolean
  + {static} fromJSON(json: Object): Movimiento
  + {static} generarId(): uuid
  + {static} normalizarTipo(tipo: string): string
  + {static} normalizarCategoria(categoria: string): string
  + {static} esFechaValida(fechaInput: Date): boolean
  + {static} esTipoValido(tipo: string): boolean
  + {static} esCategoriaValida(categoria: string): boolean
}
class MetaAhorro {
    - id : number
    - nombre : string
    - montoObjetivo: number
    - fechaObjetivo: Date | null
    - montoActual: number
    + constructor(nombre: string, montoObjetivo: number, fechaObjetivo: Date | null)
    + actualizarMontoActual(monto: number): void
    + toJSON(): Object
    + getPorcentaje(): number
    + getResumen(): string 
    + {static} validar(datos: Object): boolean
    + {static} fromJSON(json: Object): MetaAhorro
    + {static} esNombreValido(nombre: string): boolean
    + {static} esMontoValido(monto: number): boolean
    + {static} esFechaFuturaValida(fechaStr: string): boolean
}
class Exportador {
    - filtrosExportacion: {tipo, formato, nombreArchivo, rutaDestino}
    - exportar(datos: Object[], config : Object) : boolean
    + constructor()
    + exportarDatos(tipo: Array, formato: string, nombreArchivo: string, rutaDestino: string, datos: Object): Object
    + validarConfiguracion(config : Object) : boolean
    + toCSV(datos : Object[]) : string
    + toJSON(datos : Object[]) : string
    + toPDF(datos : Object[]) : string
    + toXLSX(datos : Object[]) : string
    + sessionExpFromJSON(json: Object)
    + sessionToJSON(): Object
    + {static} esFormatoValido(formato : string) : boolean
    + {static} sonNombreYRutaValidos(nombre : string, ruta : string) : boolean
}

' --- Clase de Lógica de Negocio (Gestor) ---
class Planificador{
    - movimientos: Movimiento[]
    - metasAhorro: MetaAhorro[]
    - filtros:  { fechaAscii, fechaDesde, fechaHasta, categoria , moneda}
    + constructor()
    + agregarMovimiento(datos: Object): Movimiento
    + eliminarMovimiento(idAEliminar: string): boolean
    + getOpcionesPorTipo(): Object
    + agregarMetaAhorro(datos: Object): MetaAhorro
    + getMetaByName(metaName: string): MetaAhorro | null
    + getPorcentajeMeta(meta: MetaAhorro): number
    + generarReporte(filtros: Object, fechaAscii: string): Object
    + localToJSON(): Object
    + sessionToJSON(): Object
    + obtenerVariables(modulo: string, tipo: string): Object
    + actualizarLocalVariables(tipo: string, modulo: string, objeto: Object): Object
    + actualizarSessionVariables(tipo: string, modulo: string, objeto: Object): Object
    + eliminarVariables(modulo: string, tipo: string): Object
    + {static} localFromJSON(json: Onject): Planificador
    + {static} sessionRepFromJSON(jsonFiltros: Object)
    + {static} fromJSON(json: Object): Planificador
    - filtrarDatos(filtros: Object): Movimiento[]
    - calcularIndicadores(datos: Movimiento[]): Object
}

' --- Relaciones ---

' Relación de Composición:
' Un Planificador "posee" una colección de 0 o más Movimientos.
' Si se destruye el Planificador, la colección de movimientos también.
Planificador "1" *-- "0..*" Movimiento : Posee

' Relación de Composición:
' Un Planificador "posee" una colección de 0 o más Metas.
Planificador "1" *-- "0..*" MetaAhorro : Posee

' Relación de Composicion:
' El planificador utiliza un exportador para manejar la exportación de datos.
Planificador "1" o-- "1" Exportador : Utiliza

@enduml